--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,7 +5,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   height: 120px;
-  padding: 1.5em;
+  padding: 1.5rem 3rem;
   position: fixed;
   top: 0;
   width: 100%;
@@ -24,11 +24,8 @@ nav {
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0) rotate(85deg)
-  }
   40% {
-    transform: translateY(-15px) rotate(90deg)
+    transform: translateY(-10px)
   }
 }
 
@@ -39,7 +36,7 @@ nav {
 
 .tweet-pointer {
   color: red;
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   margin-right: 7rem;
   position: absolute;
   bottom: -0.5rem;
